syntax = "proto3";
package login;

option java_multiple_files = true;
option java_package = "com.samcarpentier.login.gateway.grpc";
option java_outer_classname = "LoginGatewayProto";

service LoginService {
  rpc login (LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  repeated string phoneNumbers = 1;
}
